--- a/src/OrderService/OrderService.ApiService/OrderService.ApiService.csproj
+++ b/src/OrderService/OrderService.ApiService/OrderService.ApiService.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CQRS\Commands\" />
+    <Folder Include="CQRS\CommandHandlers\" />
+    <Folder Include="CQRS\Pipelines\" />
+    <Folder Include="CQRS\QueryHandlers\" />
+    <Folder Include="CQRS\Queries\" />
+  </ItemGroup>
+
 </Project>
